# SurveillanceMonitor

./: .gitignore  CMakeLists.txt  LICENSE  PiCamera.h.in  README.md
cmake-modules/: FindFFmpeg.cmake
include/: context.h  detector.h  surveillance.h  utils.h  video.h
sources/picamera/: CMakeLists.txt  PiCamera.h  main.cpp
sources/picamera/include/: detector.h  surveillance.h  tracker.h  utils.h
sources/picamera/src/: detector.cpp  surveillance.cpp  tracker.cpp  utils.cpp
sources/video/: CMakeLists.txt
sources/video/include/: demuxer.h  muxer.h  transcoder.h  video.h
sources/video/src/: demuxer.cpp  muxer.cpp  transcoder.cpp
src/: context.cpp  detector.cpp  main.cpp  surveillance.cpp  utils.cpp  video.cpp
src/video/: demuxer.cpp  demuxer.h  muxer.cpp  muxer.h  transcoder.cpp  transcoder.h  video.cpp  video.h
